--- a/ppms_project/profilingApp/templates/activities/Preschooler Profile.html
+++ b/ppms_project/profilingApp/templates/activities/Preschooler Profile.html
@@ -3,141 +3,174 @@
 {% block dashboard %}
 
 
-
 <!-- Dashboard -->
 <div id="grid" class="container-fluid" style="padding:3%; margin: top 50px;">
-  <div class="container-grid">
-      <div class="">
-          <div class="row"> 
-              <div class="col">
-                  <h3 style="text-align:left;">Preschooler's Profile</h3>
-              </div>
-          </div>
-      <hr>
-      </div>
-      <div>
-        <section style="">
-          <div class="row">
-            <div class="col">
-              <div class="card">
-                <div class="card-body">
-                  <div class="row">
-                    <div class="col-sm">
-                      <p class="mb-0">Full Name</p>
-                    </div>
-                    <div class="col-sm">
-                      <p class="text-muted mb-0">Johnatan Smith</p>
-                    </div>
-                  </div>
-                  <hr>
-                  <div class="row">
-                    <div class="col-sm">
-                      <p class="mb-0">Date of Birth</p>
-                    </div>
-                    <div class="col-sm">
-                      <p class="text-muted mb-0">2019-07-29</p>
-                    </div>
-                  </div>
-                  <hr>
-                  <div class="row">
-                    <div class="col-sm">
-                      <p class="mb-0">Gender</p>
-                    </div>
-                    <div class="col-sm">
-                      <p class="text-muted mb-0">Male</p>
-                    </div>
-                  </div>
-                  <hr>
-                  <div class="row">
-                    <div class="col-sm">
-                      <p class="mb-0">Weight:</p>
-                    </div>
-                    <div class="col-sm">
-                      <p class="text-muted mb-0">0</p>
-                    </div>
-                  
-                    <div class="col-sm">
-                      <p class="mb-0">Height:</p>
-                    </div>
-                    <div class="col-sm">
-                      <p class="text-muted mb-0">0</p>
-                    </div>
-                  </div>
-                  <hr>
-                  <div class="row">
-                    <div class="col-sm">
-                      <p class="mb-0">Date Measured</p>
-                    </div>
-                    <div class="col-sm">
-                      <p class="text-muted mb-0">2019-07-29</p>
-                    </div>
-                  </div>
+    <div class="container-grid">
+        <div class="">
+            <div class="row"> 
+                <div class="col">
+                    <h3 style="text-align:left;">Preschooler's Profile</h3>
                 </div>
-              </div>
             </div>
-            
-            <div class="col text-center">
-              <h6 class="text-center">Nutritional Status Legends:</h6>
-              <i class="fas fa-square" style="color: rgb(0, 165, 79);"> -Normal</i>
-              <i class="fas fa-square" style="color: rgb(255, 241, 2);"> -Wasted</i>
-              <i class="fas fa-square" style="color: rgb(238, 29, 35);"> -Severly Wasted</i>
-              <i class="fas fa-square" style="color: rgb(242, 98, 33);"> -Overweight</i>
-              <i class="fas fa-square" style="color: rgb(0,0,0);"> -Obese</i>
-              <hr>
-              <div class="card-group">
-                  <div class="card">
-                    <div class="card-header">
-                        <h6 class="card-title">WFA Status</h6>
+        <hr>
+        </div>
+        <div>
+            <section style="">
+                <div class="row">
+                    <div class="col">
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-sm">
+                                        <p class="mb-0">Full Name</p>
+                                    </div>
+                                    <div class="col-sm">
+                                        <p class="text-muted mb-0">Johnatan Smith</p>
+                                    </div>
+                                </div>
+                                <hr>
+                                <div class="row">
+                                    <div class="col-sm">
+                                        <p class="mb-0">Date of Birth</p>
+                                    </div>
+                                    <div class="col-sm">
+                                        <p class="text-muted mb-0">2019-07-29</p>
+                                    </div>
+                                </div>
+                                <hr>
+                                <div class="row">
+                                    <div class="col-sm">
+                                        <p class="mb-0">Gender</p>
+                                    </div>
+                                    <div class="col-sm">
+                                        <p class="text-muted mb-0">Male</p>
+                                    </div>
+                                </div>
+                                <hr>
+                                <div class="row">
+                                    <div class="col-sm">
+                                        <p class="mb-0">Weight:</p>
+                                    </div>
+                                    <div class="col-sm">
+                                        <p class="text-muted mb-0">0</p>
+                                    </div>
+                                    <div class="col-sm">
+                                        <p class="mb-0">Height:</p>
+                                    </div>
+                                    <div class="col-sm">
+                                        <p class="text-muted mb-0">0</p>
+                                    </div>
+                                </div>
+                                <hr>
+                                <div class="row">
+                                    <div class="col-sm">
+                                        <p class="mb-0">Date Measured</p>
+                                    </div>
+                                    <div class="col-sm">
+                                        <p class="text-muted mb-0">2019-07-29</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="card-body">
-                        <p class="card-text">0</p>
+                    
+                    <div class="col text-center">
+                        <h6 class="text-center">Nutritional Status Legends:</h6>
+                        <i class="fas fa-square" style="color: rgb(0, 165, 79);"> -Normal</i>
+                        <i class="fas fa-square" style="color: rgb(255, 241, 2);"> -Wasted</i>
+                        <i class="fas fa-square" style="color: rgb(238, 29, 35);"> -Severly Wasted</i>
+                        <i class="fas fa-square" style="color: rgb(242, 98, 33);"> -Overweight</i>
+                        <i class="fas fa-square" style="color: rgb(0,0,0);"> -Obese</i>
+                        <hr>
+                        <div class="card-group">
+                            <div class="card">
+                                <div class="card-header">
+                                    <h6 class="card-title">WFA Status</h6>
+                                </div>
+                                <div class="card-body">
+                                    <p class="card-text">0</p>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="card-header">
+                                    <h6 class="card-title">HFA Status</h6>
+                                </div>
+                                <div class="card-body">
+                                    <p class="card-text">0</p>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="card-header">
+                                    <h6 class="card-title">WHFA Status</h6>
+                                </div>
+                                <div class="card-body">
+                                    <p class="card-text">0</p>
+                                </div>
+                            </div>
+                        </div>
+                            <br>
+                            <br>
+                            <br>
+                            <div class="text-align: center;">
+                                <button style="background-color: #188045; color: white;" type="button" class="btn" data-bs-toggle="modal" data-bs-target="#update"><span class="fa fa-calendar-alt"></span> Update preschooler</button>
+                            </div>
+                            <div class="modal fade" id="update" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div class="modal-dialog modal-dialog-centered modal-lg">
+                                    <div class="modal-content">
+                                        <div class="modal-header text-center">
+                                            <h5 class="modal-title fa fa-user-edit" id="exampleModalLabel"> Preschooler Update</h5>
+                                            
+                                        </div>
+                                        <div class="modal-body mx-4">
+                                            <form method="POST">
+                                            <!-- <form method="POST" onsubmit="get_cred($('#type').val());"> -->
+                                                <!-- {% csrf_token %} -->
+                                                <div class="md-form">
+                                                    <label id="user-lbl" data-error="wrong" data-success="right">Applicant: </label>
+                                                    <!-- {{ form.examiner }} -->
+                                                </div>
+                                                <div class="md-form">
+                                                    <label id="user-lbl" data-error="wrong" data-success="right">Exam Date:</label>
+                                                    <!-- {{ form.exam_date }} -->
+                                                </div>
+                                                <div class="md-form">
+                                                    <label id="user-lbl" data-error="wrong" data-success="right">Exam Time:</label>
+                                                    <!-- {{ form.exam_time }} -->
+                                                </div>
+                                                <div class="md-form">
+                                                    <label id="user-lbl" data-error="wrong" data-success="right">Room Assignment:</label>
+                                                    <!-- {{ form.room }} -->
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <button type="submit" class="btn " style="background-color: #188045; color: white;">Add</button>
+                                                    <button type="button" class="btn" style="background-color: #EF3A25; color: white;" data-bs-dismiss="modal" aria-label="Close"> Cancel</button>
+                                                </div>
+                                            </form>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                  </div>
-                  <div class="card">
-                    <div class="card-header">
-                        <h6 class="card-title">HFA Status</h6>
-                    </div>
-                    <div class="card-body">
-                        <p class="card-text">0</p>
-                    </div>
-                  </div>
-                  <div class="card">
-                    <div class="card-header">
-                        <h6 class="card-title">WHFA Status</h6>
-                    </div>
-                    <div class="card-body">
-                        <p class="card-text">0</p>
-                    </div>
-                  </div>
                 </div>
                 <br>
-                <br>
-                <br>
-                <div >
-                  <a href="{% url 'update_preschooler'%}"><button type="button" style="background-color: #188045; color: white;" class="btn">Update</button></a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <br>
-          <div class="row">
-              <div class="card">
-                  <div class="card-header">
-                      Nutritional Status History
-                  </div>
+                <div class="row">
+                    <div class="card">
+                        <div class="card-header">
+                            Nutritional Status History
+                        </div>
 
-                  <div class="card-body">
-                      <canvas id="myChart" width="100%" height="30"></canvas>
-                  </div>
-                  <div class="card-footer small text-muted">
-                      Updated yesterday at 11:59 PM
-                  </div>
-              </div>
-          </div>
-        </section>
-        
-      </div>
-  </div>
+                        <div class="card-body">
+                            <canvas id="myChart" width="100%" height="30"></canvas>
+                        </div>
+                        <div class="card-footer small text-muted">
+                            Updated yesterday at 11:59 PM
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script>
@@ -153,7 +186,7 @@
   const data = {
     labels: labels,
     datasets: [{
-      label: 'My First dataset',
+      label: 'Preschooler BMI Status',
       backgroundColor: 'rgb(255, 99, 132)',
       borderColor: 'rgb(255, 99, 132)',
       data: [0, 10, 5, 2, 20, 30, 45],
