--- a/ppms_project/profilingApp/templates/activities/Parent Home.html
+++ b/ppms_project/profilingApp/templates/activities/Parent Home.html
@@ -114,7 +114,8 @@
                                 <th scope="col">Middle Name</th>
                                 <th scope="col">Last Name</th>
                                 <th scope="col">Suffix</th>
-                                <!-- <th scope="col">Age</th> -->
+                                <th scope="col">Age (Years)</th>
+                                <th scope="col">Age (Months)</th>
                                 <th scope="col">Birthdate</th>
                                 <th scope="col" class="nosort text-center">Action</th>
                             </tr>
@@ -127,6 +128,8 @@
                                 <td>{{ preschooler.middle_name }}</td>
                                 <td>{{ preschooler.last_name }}</td>
                                 <td>{{ preschooler.suffix_name }}</td>
+                                <td>{{ preschooler.age_years }}</td>
+                                <td>{{ preschooler.age_months }}</td>
                                 <td>{{ preschooler.birthday }}</td>
                                 <td style="text-align: center;">
                                     <div>
