--- a/ppms_project/profilingApp/templates/activities/Admin Home.html
+++ b/ppms_project/profilingApp/templates/activities/Admin Home.html
@@ -118,7 +118,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col">
+                <div class="col-xl-8">
                     <div class="card shadow-lg p-3 mb-5 bg-white rounded">
                         <div class="card-body">
                             <div class="table-responsive">
@@ -156,22 +156,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
-                    <main>
-                        <div class="container-fluid px-4">
-                            <div class="card shadow-lg p-3 mb-5 bg-white rounded">
-                                <div class="card-header">
-                                    <i class="fas fa-chart-pie me-1"></i> Pie Chart 
-                                </div>
-                                <div class="row g-0 ">
-                                    <div class="col-md-12">
-                                        <canvas id="myPieChart" width="100%" height="40"></canvas>
-                                    </div>
-                                </div>
-                                <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
-                            </div>
+                <div class="col-xl-4">
+                    <div class="card shadow-lg p-3 mb-5 bg-white rounded">  
+                        <div class="card-header"><i class="fas fa-lg fa-chart-pie" style="color:orange; position:relative; margin-right:10px;"></i>Chart</div>
+                        <div class="card-body">
+                            <canvas class="chart-view" id="myPieChart" width="470%" height="470" style="display: block; box-sizing: border-box; height: 470px; width: 470px;"></canvas> 
                         </div>
-                    </main>
+                    </div>
                 </div>
             </div>
         </div>
