--- a/ppms_project/profilingApp/templates/activities/login_registration.html
+++ b/ppms_project/profilingApp/templates/activities/login_registration.html
@@ -106,7 +106,7 @@
                             </select> -->
                             <br>
                         </div>
-                        
+                        <!-- Name -->
                         <div class="form-group">
                             <div class="row">
                                 <div class="col-6">
@@ -127,12 +127,17 @@
                                 </div>
                             </div>
                         </div>
-                        
+                        <!-- Email -->
                         <div class="form-group">
                             <label for="">Email Address</label>
                             {{ form.email }}
                         </div>
-                
+                        <!-- Phone Number -->
+                        <div class="form-group">
+                            <label for="">Contact Number</label>
+                            {{ form.phone_num }}
+                        </div>
+                        <!-- Password -->
                         <div class="form-group">
                             <label for="">Password</label>
                             {{ form.password1 }}
@@ -142,7 +147,7 @@
                             <label for="">Confirm Password</label>
                             {{ form.password2 }}
                         </div>
-
+                        <!-- EULA -->
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" name="flexRadioDefault" id="flexRadioDefault1">
                             <label class="form-check-label" for="flexRadioDefault1">
